--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ua" ng-app="">
 <head>
     <meta charset="UTF-8">
     <title>Земляки</title>
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/soft/angular.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -24,25 +25,16 @@
         </ul>
     </nav>
     <div class="content">
-        <p class="content__sub-title">Наша місія:</p><br>
-        <p class="content__text">Морально - психологічна, медична, оздоровча, соціальна і матеріальна допомога потерпілим від Чорнобильської катастрофи 26 квітня 1986 року, а також надання всебічної допомоги в розвитку і реалізації творчих здібностей, талантів, підтримка вдів, дітей-сиріт, інвалідів Чорнобиля.</p><br>
-
-        <p class="content__sub-title">Історія:</p><br>
-        <p class="content__text">Аварія на Чорнобильській атомній електростанції (26 квітня 1986 року), визнана світовим співтовариством  наймасштабнішою  техногенною та екологічною катастрофою за всю історію людства на Землі.</p>
-        <p class="content__text">Вибух на 4-му енергоблоці стався з викидом великої кількості радіоактивних речовин в навколишнє середовище і склав понад 50 мільйонів кюрі, що рівнозначно наслідкам вибухів понад 500 атомних бомб, скинутих в 1945 році на японське місто Хіросіму.</p>
-        <p class="content__text">Прип'ять - місто - супутник ЧАЕС - став епіцентром Чорнобильської катастрофи. 26-27 квітня 1986 року, кожен прип'ятчанин отримав дозу опромінення в 20 000 разів більше норми аварійного опромінення для населення, прийнятої в СРСР до Чорнобиля і в 95 000 разів більше норми, прийнятої в США і Європі. До цих пір і в далекому майбутньому (більш 300 років) Прип'ять залишиться самою забрудненою територією в 30-км зоні аварії на ЧАЕС.</p><br>
-
-        <p class="content__sub-title">Організатори:</p><br>
-        <p class="content__text">У 1987 році у відповідь на жахливу екологічну трагедію групою прип'ятчан - ентузіастів був заснований Клуб «Земляки», який через кілька років офіційно зареєстрований в громадську благодійну організацію. Сьогодні «Земляки» об'єднують понад 2 тисячі членів: інвалідів, учасників ліквідації аварії на ЧАЕС, вдів, дітей, дітей-інвалідів, евакуйованих із чорнобильської зони.</p><br>
-
-        <p class="content__sub-title">Ми допомагаємо:</p><br>
-        <p class="content__text">У Деснянський район міста Києва евакуйовано в 1986 році понад 40 тисяч переселенців з міст Прип'ять, Чорнобиль та населених пунктів 30-км зони відчуження. Ці люди з покаліченими долями, безповоротно підірваним здоров'ям, з хворими дітьми на руках постійно ведуть боротьбу за виживання в державі, байдужій до їх проблем і бід. Наша організація надає допомогу евакуйованим жителям з 30 км зони та ліквідаторам наслідків аварії на ЧАЕС, людям,  що  потребують допомоги, різної  вікової категорії.</p><br>
-
-        <img class="content__img" src="img/photos/common-photo.jpg" alt="commonPhotos">
+        {{2+3}}
     </div>
 
-    //= htmlPartials/footer.html
+    //=    htmlPartials/footer.html
 
 </div>
+
+//= htmlPartials/js.html
+
+<script src="js/soft/jquery-3.2.1.js"></script>
+
 </body>
 </html>
