--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,17 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" ng-class="menuClass('')" ng-href="#!/">Головна</a></li>
-            <li class="nav__item"><a class="nav__link" ng-class="menuClass('activity')" ng-href="#!/activity">Діяльність</a></li>
-            <li class="nav__item"><a class="nav__link" ng-class="menuClass('cooperation')" ng-href="#!/cooperation">Співпраця</a></li>
-            <li class="nav__item"><a class="nav__link" ng-class="menuClass('news')" ng-href="#!/news">Новини</a></li>
-            <li class="nav__item"><a class="nav__link" ng-class="menuClass('contacts')" ng-href="#!/contacts">Контакти</a></li>
+            <li class="nav__item"><a class="nav__link" ng-class="menuClass('')" ui-sref="#!/">Головна</a></li>
+            <li class="nav__item"><a class="nav__link" ng-class="menuClass('activity')" ui-sref="#!/activity">Діяльність</a></li>
+            <li class="nav__item"><a class="nav__link" ng-class="menuClass('cooperation')" ui-sref="#!/cooperation">Співпраця</a></li>
+            <li class="nav__item"><a class="nav__link" ng-class="menuClass('news')" ui-sref="#!/news">Новини</a></li>
+            <li class="nav__item"><a class="nav__link" ng-class="menuClass('contacts')" ui-sref="#!/contacts">Контакти</a></li>
         </ul>
     </nav>
 
     <div class="content">
 
-        <ng-view></ng-view>
+        <ui-view></ui-view>
 
     </div>
 
