--- a/src/htmlPartials/js.html
+++ b/src/htmlPartials/js.html
@@ -4,7 +4,7 @@
 <script src="js/soft/angular.min.js"></script>
 <script src="js/soft/angular-route.min.js"></script>
 <script src="js/soft/angular-resource.min.js"></script>
-<!--<script src="js/soft/angular-ui-router.js"></script>-->
+<script src="js/soft/angular-ui-router.js"></script>
 
 <script src="js/state/config-state-provider.js"></script>
 
